# yauza_sim_pyqt

./: README.md  pyproject.toml
tests/: test_something.py
yauza/: main.py  train.py
yauza/gui/: app.py  widgets.py
